Added wolf, bear and berry to spawnStuff()